<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.dllo.food.activity.MainActivity">

    <LinearLayout
        android:id="@+id/tab_rg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"></LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/fragment_home_tv"/>

    <RadioGroup

        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_library"
            style="@style/radiobutton"
            android:checked="true"
            android:drawableTop="@drawable/tab_library_btnstytle"
            android:text="@string/library" />

        <RadioButton
            android:id="@+id/tab_homepage"
            style="@style/radiobutton"
            android:drawableTop="@drawable/tab_homepage_btnstytle"
            android:text="@string/homepage" />

        <RadioButton
            android:id="@+id/tab_my"
            style="@style/radiobutton"

            android:drawableTop="@drawable/tab_my_btnstytle"
            android:text="@string/my" />
    </RadioGroup>

</LinearLayout>
